...

    <!--login screen strings-->
    <string name="logo_content_description">logo</string>
    <string name="login_header">Enter Login Credentials</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_button_text">login</string>
    <string name="showPassword">show</string>
    <string name="hidePassword">hide</string>
    <string name="validatingMessage">Validating Credentials...</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="searchid">Search by UserID</string>
    <string name="searchlobbyid">Search by LobbyID</string>

    <string name="login_failed">Invalid login credentials. Try Again</string>
    <string name="login_error">Login Error</string>
    <string name="volley_error">Volley Error</string>

    <!--signup screen strings-->
    <string name="signup_header">Create An Account</string>
    <string name="signup_description">Password Must include \n - 8 characters \n - 1 number</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="signup_button_text">create account</string>

    <string name="no_username">Please Fill Username Field</string>
    <string name="no_password">Please Fill Password Field</string>
    <string name="invalid_password">Please Follow Given Password Requirements</string>
    <string name="username_unavailable">Username Unavailable, Please Try Another</string>
    <string name="password_mismatch">Passwords Do Not Match</string>
...

    <!--main menu strings-->
    <string name="id_display">ID: %d</string>

    <string name="join_game_button">JOIN GAME</string>
    <string name="host_game_button">HOST GAME</string>
    <string name="leaderboards_button">LEADERBOARD</string>
    <string name="logout_button">LOGOUT</string>

    <!--user menu strings-->
    <string name="add_friends_button">Add Friends</string>
    <string name="user_id_display">User Id: %d</string>
    <string name="games_played_display">Games Played: %d</string>
...
    <string name="unready">Unready</string>
    <string name="game_code">Code: %1$s</string>
    <string name="waiting_for_players">Waiting for Players</string>

    <!-- Leaderboard screen-->
    <string name="global">Global</string>
    <string name="friends">Friends</string>
    <string name="games_played">Games Played</string>
    <string name="games_won">Games Won</string>
    <string name="team_wins">Team wins</string>

    <!-- Admin Screen-->
    <string name="admin_screen">Admin Page</string>
...
