...

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"
                />
            <Button
                android:id="@+id/friends_list"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/friends"
                android:backgroundTint="?attr/colorSecondary"
                android:textColor="?attr/buttonTint"
                />
...

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:id="@+id/users"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="top"
                >
            </LinearLayout>
...
