<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundColor"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:layout_margin="30dp"
        android:contentDescription="@string/logo_content_description"
        android:src="@drawable/ic_unus"
        />

    <TextView
        android:id="@+id/login_header"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:layout_marginHorizontal="30dp"
        android:text="@string/login_header"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/username_field"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/username_hint"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        >

        <EditText
            android:id="@+id/password_field"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            />

        <Button
            android:id="@+id/show_hide_button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.25"
            android:backgroundTint="?attr/buttonTint"
            android:textColor="?attr/colorSecondary"
            android:textStyle="bold"
            android:text="@string/showPassword"
            />

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_weight="0.15"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/login_button_text"
        android:backgroundTint="?attr/buttonTint"
        android:textColor="?attr/colorSecondary"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/create_account_button"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_weight="0.15"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/signup_button_text"
        android:backgroundTint="?attr/buttonTint"
        android:textColor="?attr/colorSecondary"
        android:textStyle="bold"
        />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        />

</LinearLayout>