...
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/username_display"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:textSize="25sp"
                android:layout_gravity="end"
                android:textColor="@color/white"
...
