<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundColor"
    >

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"

        >

        <Button
            android:id="@+id/back_to_login"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:text="back"
            android:backgroundTint="?attr/buttonTint"
            android:textColor="?attr/colorSecondary"
            android:textStyle="bold"
            />

    </LinearLayout>
    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        />

    <TextView
        android:id="@+id/signup_header"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/signup_header"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/signup_status"
        android:layout_height="30dp"
        android:layout_width="fill_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"

        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/signup_username_field"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/username_hint"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        />

    <TextView
        android:id="@+id/signup_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/signup_description"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/signup_password_field"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        />

    <EditText
        android:id="@+id/signup_confirm_password_field"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        />

    <Button
        android:id="@+id/signup_button"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_weight="0.15"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/signup_button_text"
        android:backgroundTint="?attr/buttonTint"
        android:textColor="?attr/colorSecondary"
        android:textStyle="bold"
        />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        />

</LinearLayout>